<resources>
    <string name="app_name">CalPar</string>
    <string name="white_noise">White noise</string>
    <string name="pink_noise">Pink noise</string>
    <string name="brown_noise">Brown noise</string>
    <string name="heart_beat">Heart beat</string>
    <string name="stop">STOP</string>
    <string name="snackbar_test">Snackbar Test</string>
    <string name="toasttest">Toast test</string>


</resources>